--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>My Resume</title>
-
+        <link
+            href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700|Lora:700,700i|Oswald:500"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="css/index.css" />
 
         <!--[if lt IE 9]>
@@ -14,6 +17,14 @@
     </head>
 
     <body>
-        <h1>My Resume</h1>
+        <header class="header">
+            <h1 class="header-title">Firstname Lastname</h1>
+            <nav class="nav">
+                <a href="#intro" class="nav-link">Intro</a>
+                <a href="#skills" class="nav-link">Skills</a>
+                <a href="#workHistory" class="nav-link">Work History</a>
+                <a href="#contact" class="nav-link">Contact</a>
+            </nav>
+        </header>
     </body>
 </html>
